src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Access_Group__c</fullName>
        <defaultValue>&quot;EXTERNAL&quot;</defaultValue>
        <label>Access Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Priority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GBS_VIP_User__c</fullName>
        <description>Field identifies users as VIP for the GBS Community; this field, when checked, will enable users to see categories that the user would not otherwise have the ability to see. Further, this field may drive tighter SLAs.</description>
        <inlineHelpText>Field identifies users as VIP for the GBS Community; this field, when checked, will enable users to see categories that the user would not otherwise have the ability to see. Further, this field may drive tighter SLAs.</inlineHelpText>
        <label>GBS VIP User</label>
        <picklist>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Military__c</fullName>
        <label>Military?</label>
        <picklist>
            <picklistValues>
                <fullName>Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military Export</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trainee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trainee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VIP_Selected_Val__c</fullName>
        <formula>IF(INCLUDES(VIP__c,&quot;Customer Service&quot;),&quot;Customer Service;&quot;,NULL)+IF(INCLUDES(VIP__c ,&quot;HR&quot;),&quot;HR;&quot;,NULL)+IF(INCLUDES(VIP__c,&quot;PTP/AP&quot;),&quot;PTP/AP;&quot;,NULL)+IF(INCLUDES(VIP__c,&quot;Payroll&quot;),&quot;Payroll;&quot;,NULL)+IF(INCLUDES(VIP__c,&quot;RTR&quot;),&quot;RTR;&quot;,NULL)+IF(INCLUDES(VIP__c,&quot;T&amp;E&quot;),&quot;T&amp;E;&quot;,NULL)+IF(INCLUDES(VIP__c,&quot;GMDM&quot;),&quot;GMDM;&quot;,NULL)+IF(INCLUDES(VIP__c,&quot;OTC Billing&quot;),&quot;OTC Billing;&quot;,NULL)+IF(INCLUDES(VIP__c,&quot;Bailment&quot;),&quot;Bailment;&quot;,NULL)+IF(INCLUDES(VIP__c,&quot;Compliance&quot;),&quot;Compliance;&quot;,NULL)+IF(INCLUDES(VIP__c,&quot;Costing&quot;),&quot;Costing;&quot;,NULL)+IF(INCLUDES(VIP__c,&quot;GBS_IR&quot;),&quot;GBS_IR;&quot;,NULL)+IF(INCLUDES(VIP__c,&quot;Inventory_Analyst&quot;),&quot;Inventory_Analyst;&quot;,NULL)+IF(INCLUDES(VIP__c,&quot;PGI&quot;),&quot;PGI;&quot;,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIP Selected Val</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <label>VIP</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTP/AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTC Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bailment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBS_IR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory_Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGI</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__GUS_User_Type__c</fullName>
        <description>Full Time Employee - This will be used to identify all FTEs in GUS
Contractor - This will be used to identify all Contractors in GUS
Team User - This will be used to identify all Team Users in GUS
API user - This will be used to identify all API users in GUS</description>
        <label>GUS User Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>API User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Notification_Level__c</fullName>
        <inlineHelpText>Adjusts how often you are sent emails about Work.

Bread &amp; Butter:  User comments and added as an Assignee
Meat &amp; Potatoes: User comments, status changes and added as Assignee
The Whole Enchilada: All notifications (Default)</inlineHelpText>
        <label>Work Notification Level</label>
        <picklist>
            <picklistValues>
                <fullName>Bread &amp; Butter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meat &amp; Potatoes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>The Whole Enchilada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Show_All_Work_Comments__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show All Work Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Summary__c</fullName>
        <label>Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Team_Member_Allocation__c</fullName>
        <formula>HYPERLINK(&apos;/apex/adm_teammemberallocation?Id=&apos; +  Id, &apos;view&apos; )</formula>
        <label>Team Member Allocation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Wall_Preference__c</fullName>
        <label>Wall Preference</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Work_User_Interface__c</fullName>
        <inlineHelpText>Determines which version of the Work page you will see for Bugs and User Stories.</inlineHelpText>
        <label>Work User Interface</label>
        <picklist>
            <picklistValues>
                <fullName>Classic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Generation</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>All_Users</fullName>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>LANGUAGE</columns>
        <columns>TIMEZONE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Community_Company_Employees_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>LANGUAGE</columns>
        <columns>TIMEZONE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Company Employee</value>
        </filters>
        <label>Community - Company Employees Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Community_Distributor_Community_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Access_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Distributor Community</value>
        </filters>
        <label>Community - Distributor Community Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Community_Distributor_Plus_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Access_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Distributor Community Plus</value>
        </filters>
        <label>Community - Distributor Plus Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Community_ServiceDesk_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>ServiceDesk</value>
        </filters>
        <label>Community - ServiceDesk Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Community_Vendor_Community_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Access_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Vendor Community</value>
        </filters>
        <label>Community - Vendor Community Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sales_Cloud_All_Commercial_Services</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 4 AND 5</booleanFilter>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>American Stillhouse,Application Admin,Community</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>CS Coordinator,CS Management,GBS,Read Only - Customer Service,System Adminis</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Chatter,Commercial Services Management,Communities</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Company Employee,Read Only - Customer Service,System Administrator</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Beam Suntory,Urban Stillhouse,Vendor</value>
        </filters>
        <label>Sales Cloud - All Commercial Services</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sales_Cloud_Commercial_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.ADDRESS_COUNTRY</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>startsWith</operation>
            <value>Commercial</value>
        </filters>
        <label>Sales Cloud - Commercial Admins</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Service_Cloud_CS_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.ADDRESS_COUNTRY</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>startsWith</operation>
            <value>CS,Customer</value>
        </filters>
        <label>Service Cloud - CS Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Service_Cloud_GBS_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>Access_Group__c</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.ADDRESS_COUNTRY</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>startsWith</operation>
            <value>GBS,Global</value>
        </filters>
        <label>Service Cloud - GBS Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>System_Administrator_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>startsWith</operation>
            <value>System Administrator</value>
        </filters>
        <label>System Administrator Users</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>